# controllers/doccontroller.js
@@ -1,9 +1,10 @@
 const Document = require('../models/Document');
 const Confirm = require('../models/Confirm');
 const User = require('../models/User');
-const asyncHandler = require('express-async-handler');
+const catchAsync = require("../middlewares/async");
+const ApiError = require("../utils/ApiError");
 const deleteFile = require('../utils/deleteFile');
-const getAllDocs = asyncHandler(async(req, res) => {
+const getAllDocs = catchAsync(async (req, res) => {
     const pageSize = 12;
     const page = Number(req.query.pageNumber) || 1;
     const sort = req.query.sort || '-createdAt';
@@ -13,12 +14,12 @@ const getAllDocs = asyncHandler(async(req, res) => {
         .limit(pageSize)
         .skip(pageSize * (page - 1))
         .sort(sort)
-    if (!docs) return res.status(400).json({ message: "There are no documents" });
+    if (!docs) throw new ApiError(404, "Document Not Found");
     // console.log(docs)
     res.status(200).json({ docs, page, pages: Math.ceil(count / pageSize), count });
 });
 
-const trashGetAllDocs = asyncHandler(async(req, res) => {
+const trashGetAllDocs = catchAsync(async (req, res) => {
     const pageSize = 12;
     const page = Number(req.query.pageNumber) || 1;
     const sort = req.query.sort || '-createdAt';
@@ -28,12 +29,12 @@ const trashGetAllDocs = asyncHandler(async(req, res) => {
         .limit(pageSize)
         .skip(pageSize * (page - 1))
         .sort(sort)
-    if (!docs) return res.status(400).json({ message: "There are no documents" });
+    if (!docs) throw new ApiError(404, "Document Not Found");
     // console.log(docs)
     res.status(200).json({ docs, page, pages: Math.ceil(count / pageSize), count });
 });
 
-const restoreDoc = asyncHandler(async(req, res) => {
+const restoreDoc = catchAsync(async (req, res) => {
 
     await Document.restore({ _id: req.params.id });
     await Confirm.restore({ docId: req.params.id });
@@ -42,12 +43,12 @@ const restoreDoc = asyncHandler(async(req, res) => {
 
 
 
-const getDoc = asyncHandler(async(req, res) => {
+const getDoc = catchAsync(async (req, res) => {
     const doc = await Document.findById(req.params.id);
     res.status(200).json({ doc });
 });
 
-const getAllUsers = asyncHandler(async(req, res) => {
+const getAllUsers = catchAsync(async (req, res) => {
     const document = await Document.findById(req.params.id);
     const userConfirms = [];
     let query = { role: { $ne: 9 } };
@@ -64,15 +65,13 @@ const getAllUsers = asyncHandler(async(req, res) => {
         const users = await User.find(query);
 
         res.status(200).json(users);
-    } else {
-        res.status(400).json({ error: 'Document not found' });
     }
 });
 
-const createDoc = asyncHandler(async(req, res) => {
+const createDoc = catchAsync(async (req, res) => {
     // console.log(req.file);
     if (!req.file) {
-        return res.status(400).json({ message: "Invalid file, accepted file (pdf, .doc, .docx)" })
+        throw new ApiError(404, "Invalid file, accepted file (pdf, .doc, .docx)");
     }
     if (!req.body.title) {
         let fileName = req.file.filename;
@@ -88,14 +87,14 @@ const createDoc = asyncHandler(async(req, res) => {
     res.status(200).json({ docs });
 });
 
-const updateDoc = asyncHandler(async(req, res) => {
+const updateDoc = catchAsync(async (req, res) => {
     const { id: docId } = req.params;
     const document = await Document.findById({ _id: docId });
     let doc;
 
     if (document) {
         if (!req.file) {
-            doc = await Document.findOneAndUpdate({ _id: docId }, {...req.body }, {
+            doc = await Document.findOneAndUpdate({ _id: docId }, { ...req.body }, {
                 new: true,
                 runValidators: true,
             });
@@ -103,32 +102,21 @@ const updateDoc = asyncHandler(async(req, res) => {
             deleteFile(`.\\public\\${document.url}`);
             doc = await Confirm.updateMany({ docId: docId }, { status: 'Open' });
         }
-    } else {
-        return res.status(400).json({
-            messagee: 'No doc with id'
-        });
-
+        return res.status(200).json({ doc });
     }
-    return res.status(200).json({ doc });
 
 });
 
-const deleteDoc = asyncHandler(async(req, res) => {
+const deleteDoc = catchAsync(async (req, res) => {
     const { id: docId } = req.params;
     const doc = await Document.delete({ _id: docId });
     await Confirm.delete({ docId });
-    if (!doc) {
-        return res.status(400).json({
-            messagee: 'No doc with id'
-        });
-
-    }
     res.status(200).json({ doc });
 });
 
 
 
-const assignUsers = asyncHandler(async(req, res) => {
+const assignUsers = catchAsync(async (req, res) => {
     const { id: docId } = req.params;
     const userIds = req.body;
     // console.log(docId);
@@ -155,8 +143,6 @@ const assignUsers = asyncHandler(async(req, res) => {
         });
         const confirms = await Confirm.insertMany(newUserConfirm);
         res.status(200).json(confirms);
-    } else {
-        res.status(400).json({ error: 'Document not found' })
     }
 
 });
